--- a/AreaDocente/Views/Home/Index.cshtml
+++ b/AreaDocente/Views/Home/Index.cshtml
@@ -115,6 +115,7 @@
 						<thead>
 							<tr>
 								<th>Mittente</th>
+								<th>Destinatario</th>
 								<th>Comunicazione</th>
 							</tr>
 						</thead>
@@ -127,17 +128,51 @@
 											var primaComunicazione = gruppo.OrderBy(c => c.DataOraComunicazione).FirstOrDefault();
 											if (primaComunicazione != null)
 											{
-												if (primaComunicazione.Studente != null && primaComunicazione.K_Soggetto == primaComunicazione.Studente.K_Studente)
+												if (primaComunicazione.MittenteStudente != null)
 												{
-													<span class="text-primary">@($"{primaComunicazione.Studente.Nome} {primaComunicazione.Studente.Cognome}")</span>
+													if (primaComunicazione.MittenteStudente.K_Studente != primaComunicazione.K_Soggetto)
+													{
+														<span class="text-primary">@($"{primaComunicazione.MittenteStudente.Nome} {primaComunicazione.MittenteStudente.Cognome}")</span>
+													}
+													else
+													{
+														<span class="text-primary">Me</span>
+													}
+
 												}
-												else if (primaComunicazione.Docente != null && primaComunicazione.K_Soggetto == primaComunicazione.Docente.K_Docente)
+												else if (primaComunicazione.MittenteDocente != null)
 												{
-													<span class="text-primary">@($"{primaComunicazione.Docente.Nome} {primaComunicazione.Docente.Cognome}")</span>
+													if (primaComunicazione.MittenteDocente.K_Docente != primaComunicazione.K_Soggetto)
+													{
+														<span class="text-primary">@($"{primaComunicazione.MittenteDocente.Nome} {primaComunicazione.MittenteDocente.Cognome}")</span>
+													}
+													else
+													{
+														<span class="text-primary">Me</span>
+													}
 												}
 												else
 												{
 													<span class="text-primary">Amministrazione</span>
+												}
+											}
+										}
+									</td>
+									<td>
+										@{
+											if (primaComunicazione != null)
+											{
+												if (primaComunicazione.DestinatarioStudente != null)
+												{
+													<span class="text-danger">@($"{primaComunicazione.DestinatarioStudente.Nome} {primaComunicazione.DestinatarioStudente.Cognome}")</span>
+												}
+												else if (primaComunicazione.DestinatarioDocente != null)
+												{
+													<span class="text-danger">@($"{primaComunicazione.DestinatarioDocente.Nome} {primaComunicazione.DestinatarioDocente.Cognome}")</span>
+												}
+												else
+												{
+													<span class="text-danger">Amministrazione</span>
 												}
 											}
 										}
@@ -160,17 +195,22 @@
 																		<div class="card-header d-flex justify-content-between p-3">
 																			<div class="d-flex justify-content-between align-items-baseline">
 																				<p class="fw-bold mb-0">
-																					@if (comunicazione.Studente != null && comunicazione.K_Soggetto == comunicazione.Studente.K_Studente)
-																					{
-																						<span class="text-primary">@($"{comunicazione.Studente.Nome} {comunicazione.Studente.Cognome} - {comunicazione.Soggetto}")</span>
-																					}
-																					else if (comunicazione.Docente != null && comunicazione.K_Soggetto == comunicazione.Docente.K_Docente)
-																					{
-																						<span class="text-danger">@($"{comunicazione.Docente.Nome} {comunicazione.Docente.Cognome} - {comunicazione.Soggetto}")</span>
-																					}
-																					else
-																					{
-																						<span class="text-success">Amministrazione</span>
+																					@{
+																						if (comunicazione != null)
+																						{
+																							if (comunicazione.MittenteStudente != null)
+																							{
+																								<span class="text-primary">@($"{comunicazione.MittenteStudente.Nome} {comunicazione.MittenteStudente.Cognome}")</span>
+																							}
+																							else if (comunicazione.MittenteDocente != null)
+																							{
+																								<span class="text-danger">@($"{comunicazione.MittenteDocente.Nome} {comunicazione.MittenteDocente.Cognome}")</span>
+																							}
+																							else
+																							{
+																								<span class="text-success">Amministrazione</span>
+																							}
+																						}
 																					}
 																				</p>
 																				&nbsp;
