--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -141,15 +141,16 @@
 		<div class="container">
 			<div class="row gy-4">
 				<div class="col-12 col-md-4">
-					<img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid mb-2" width="150px">
+					<img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid mb-2" width="150px;">
 					<p class="fs-4 mb-0">Università UNIGen</p>
+					
 					<p class="fs-6">Milano, MI 20100, IT</p>
 				</div>
-				<div class="col-12 col-md-4 d-flex align-items-end">
+				<div class="col-12 col-md-4 d-flex align-items-end" style="margin-bottom:1vh;">
 					<p class="fs-6 mb-0">&copy; 2024 Generation: You Employed, Inc.</p>
 				</div>
-				<div class="col-12 col-md-4">
-					<p class="fs-5 mb-1">Chi Siamo</p>
+				<div class="col-12 col-md-4 d-flex flex-column align-items-end justify-content-end">
+					<p class="fs-5 mb-1 pe-4">Chi Siamo</p>
 					<ul class="list-unstyled">
 						<li><a class="text-white" asp-controller="Home" asp-action="Contatti">Contatti</a></li>
 						<li><a class="text-white" asp-controller="Home" asp-action="Come_Funziona">Come Funziona</a></li>
