--- a/AreaStudente/Views/Home/Come_Funziona.cshtml
+++ b/AreaStudente/Views/Home/Come_Funziona.cshtml
@@ -27,12 +27,12 @@
 
 			<ul>
 
-				<li>diploma di maturità quinquennale;</li>
+				<li>Diploma di maturità quinquennale;</li>
 				<li>
-					diploma di maturità quadriennale con anno integrativo.
+					Diploma di maturità quadriennale con anno integrativo.
 					Nel caso in cui il diploma sia rilasciato da istituti che non prevedevano l’anno integrativo, contatta la Segreteria studenti;
 				</li>
-				<li>titolo estero valido.</li>
+				<li>Titolo estero valido.</li>
 			</ul>
 
 
@@ -56,10 +56,10 @@
 			I corsi (Lauree, Lauree Magistrali a ciclo unico, Lauree Magistrali) possono essere a numero programmato (a livello locale o nazionale) oppure ad accesso libero <br />
 
 
-			<p class="fw-bold">L’iscrizione avviene in due fasi successive</p>:
+			<p class="fw-bold">L’iscrizione avviene in due fasi successive:</p>
 			<ul>
-				<li>la registrazione</li>
-				<li>l’immatricolazione</li>
+				<li>La registrazione</li>
+				<li>L’immatricolazione</li>
 			</ul>
 		</div>
 
