layout e contatti e come funziona

--- a/AreaStudente/Views/Home/Come_Funziona.cshtml
+++ b/AreaStudente/Views/Home/Come_Funziona.cshtml
@@ -82,7 +82,7 @@
 			Per iscriversi all’UniGen è <strong>necessario compilare</strong> un modulo di registrazione online.
 			Durante la registrazione, ti verrà chiesto di fornire alcune informazioni personali, come <strong></strong> nome, <strong></strong>cognome, <strong></strong>indirizzo email e <strong></strong>numero di telefono.
 			Queste informazioni sono <strong>necessarie</strong>  per creare il <strong>tuo profilo studente</strong> e per <strong>comunicare con te</strong> durante il tuo percorso accademico.<br>
-			È possibile effettuare la registrazione al sito UniGen direttamente da questo <a href="#">link</a>.<br>
+			È possibile effettuare la registrazione al sito UniGen direttamente da questo <a href="https://localhost:7272/Login/Register">link</a>.<br>
 			La registrazione <strong>non implica</strong> alcun impegno <strong>vincolante per l'immatricolazione</strong>.
 
 		</div>
