--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -38,9 +38,9 @@
 			right: 0; /* Posiziona il link a destra */
 		}
 
-		body {
+	/* 	body {
 			background-color: #f8f9fe;
-		}
+		} */
 
 		html, body {
 			height: 100%;
