--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -1,6 +1,10 @@
 ﻿@using System.Globalization
 @model AreaStudente.Models.ImmatricolazioneViewModel
 
+@{
+	bool isStudenteAbilitato = Model.Matricola.HasValue;
+}
+
 <div class="main-content">
 	<div class="container-fluid">
 		<form class="row" method="post" id="modifica-form" enctype="multipart/form-data">
@@ -67,8 +71,8 @@
 						<h4 class="heading-small text-muted">SELEZIONA UNA FACOLTÀ</h4>
 						<div class="row mb-0 mb-lg-3 align-items-end">
 							<div class="col-12 col-lg-9 mb-2 mb-lg-0">
-								<select asp-for="K_Facolta" asp-items="Model?.FacoltaList" class="form-control" id="facolta-select">
-									<option disabled selected required>-- Selezionare una Facoltà --</option>
+								<select asp-for="K_Facolta" asp-items="Model?.FacoltaList" class="form-control" id="facolta-select" disabled="@isStudenteAbilitato">
+									<option selected>-- Selezionare una Facoltà --</option>
 								</select>
 							</div>
 						</div>
@@ -77,8 +81,8 @@
 						<h4 class="heading-small text-muted">SELEZIONA UN CORSO</h4>
 						<div class="row mb-0 mb-lg-3 align-items-end">
 							<div class="col-12 col-lg-9 mb-2 mb-lg-0">
-								<select asp-for="K_Corso" asp-items="Model?.CorsiList" class="form-control" id="corso-select">
-									<option disabled selected required>-- Selezionare un Corso --</option>
+								<select asp-for="K_Corso" asp-items="Model?.CorsiList" class="form-control" id="corso-select" disabled="@isStudenteAbilitato">
+									<option selected>-- Selezionare un Corso --</option>
 								</select>
 							</div>
 						</div>
@@ -88,12 +92,12 @@
 						<div class="row mb-0 mb-lg-3">
 							<div class="col-12 col-lg-4 mb-2 mb-lg-0">
 								<label class="form-label form-control-label">Cognome</label>
-								<input type="text" asp-for="Cognome" class="form-control form-control-alternative" required />
+								<input type="text" asp-for="Cognome" class="form-control form-control-alternative" disabled="@isStudenteAbilitato" required />
 								<span asp-validation-for="Cognome" class="text-danger"></span>
 							</div>
 							<div class="col-12 col-lg-4 mb-2">
 								<label class="form-label form-control-label">Nome</label>
-								<input type="text" asp-for="Nome" class="form-control form-control-alternative" required />
+								<input type="text" asp-for="Nome" class="form-control form-control-alternative" disabled="@isStudenteAbilitato" required />
 								<span asp-validation-for="Nome" class="text-danger"></span>
 							</div>
 							@{
@@ -103,7 +107,7 @@
 							}
 							<div class="col-12 col-lg-4 mb-2">
 								<label class="form-label form-control-label">Data di Nascita</label>
-								<input type="date" asp-for="DataNascita" class="form-control form-control-alternative" max="@maxData" required />
+								<input type="date" asp-for="DataNascita" class="form-control form-control-alternative" max="@maxData" disabled="@isStudenteAbilitato" required />
 								<span asp-validation-for="DataNascita" class="text-danger"></span>
 							</div>
 						</div>
@@ -113,11 +117,11 @@
 						<div class="row mb-0 mb-lg-3">
 							<div class="col-12 col-lg-9 mb-2 mb-lg-0">
 								<label class="form-label form-control-label">Indirizzo</label>
-								<input type="text" asp-for="Indirizzo" class="form-control form-control-alternative" required />
+								<input type="text" asp-for="Indirizzo" class="form-control form-control-alternative" disabled="@isStudenteAbilitato" required />
 								<span asp-validation-for="Indirizzo" class="text-danger"></span>
 							</div>
 							<div class="col-12 col-lg-3 mb-2 mb-lg-0">
-								<label class="form-label form-control-label">CAP</label> <input asp-for="CAP" class="form-control form-control-alternative" maxlength="5" required />
+								<label class="form-label form-control-label">CAP</label> <input asp-for="CAP" class="form-control form-control-alternative" maxlength="5" disabled="@isStudenteAbilitato" required />
 								<span asp-validation-for="CAP" class="text-danger"></span>
 							</div>
 						</div>
@@ -125,12 +129,12 @@
 						<div class="row mb-0 mb-lg-3">
 							<div class="col-12 col-lg-9 mb-2 mb-lg-0">
 								<label class="form-label form-control-label">Città</label>
-								<input type="text" asp-for="Citta" class="form-control form-control-alternative" required />
+								<input type="text" asp-for="Citta" class="form-control form-control-alternative" disabled="@isStudenteAbilitato" required />
 								<span asp-validation-for="Citta" class="text-danger"></span>
 							</div>
 							<div class="col-12 col-lg-3 mb-2 mb-lg-0">
 								<label class="form-label form-control-label">Provincia</label>
-								<input type="text" asp-for="Provincia" class="form-control form-control-alternative" maxlength="2" required />
+								<input type="text" asp-for="Provincia" class="form-control form-control-alternative" maxlength="2" disabled="@isStudenteAbilitato" required />
 								<span asp-validation-for="Provincia" class="text-danger"></span>
 							</div>
 						</div>
@@ -223,6 +227,7 @@
 			const corsoSelect = document.getElementById("corso-select");
 
 			facoltaSelect.addEventListener("change", function () {
+				console.log("change facolta")
 				const input = document.createElement("input");
 				input.type = "hidden";
 				input.name = "updateFacolta";
