error on seleziona corsi

--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -82,7 +82,7 @@
 						<div class="row mb-0 mb-lg-3 align-items-end">
 							<div class="col-12 col-lg-9 mb-2 mb-lg-0">
 								<select asp-for="K_Corso" asp-items="Model?.CorsiList" class="form-control" id="corso-select" disabled="@isStudenteAbilitato">
-									<option selected>-- Selezionare un Corso --</option>
+									<option value="" selected>-- Selezionare un Corso --</option>
 								</select>
 							</div>
 						</div>
