--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -28,27 +28,43 @@
 									{
 										if (primaComunicazione.MittenteStudente != null)
 										{
-											if (primaComunicazione.MittenteStudente.K_Studente != primaComunicazione.K_Soggetto)
+											if (ruolo != "a")
 											{
-												<span class="text-primary">@($"{primaComunicazione.MittenteStudente.Nome} {primaComunicazione.MittenteStudente.Cognome}")</span>
+
+												if (primaComunicazione.MittenteStudente.K_Studente != primaComunicazione.K_Soggetto)
+												{
+													<span class="text-primary">@($"{primaComunicazione.MittenteStudente.Nome} {primaComunicazione.MittenteStudente.Cognome}")</span>
+												}
+												else
+												{
+													<span class="text-primary">Me</span>
+												}
 											}
 											else
 											{
-												<span class="text-primary">Me</span>
+												<span class="text-primary">@($"{primaComunicazione.MittenteStudente.Nome} {primaComunicazione.MittenteStudente.Cognome}")</span>
 											}
 
 										}
 										else if (primaComunicazione.MittenteDocente != null)
 										{
-											if (primaComunicazione.MittenteDocente.K_Docente != primaComunicazione.K_Soggetto)
+											if (ruolo != "a")
 											{
-												<span class="text-primary">@($"{primaComunicazione.MittenteDocente.Nome} {primaComunicazione.MittenteDocente.Cognome}")</span>
+												if (primaComunicazione.MittenteDocente.K_Docente != primaComunicazione.K_Soggetto)
+												{
+													<span class="text-primary">@($"{primaComunicazione.MittenteDocente.Nome} {primaComunicazione.MittenteDocente.Cognome}")</span>
+												}
+												else
+												{
+													<span class="text-primary">Me</span>
+												}
 											}
 											else
 											{
-												<span class="text-primary">Me</span>
+												<span class="text-primary">@($"{primaComunicazione.MittenteDocente.Nome} {primaComunicazione.MittenteDocente.Cognome}")</span>
 											}
 										}
+
 										else
 										{
 											<span class="text-primary">Amministrazione</span>
